# score-addon-analysis

./: .gitmodules  CMakeLists.txt  addon.json  release.sh  score_plugin_analysis.cpp
.github/workflows/: builds.yaml  jit.yml  release.yml
Analysis/: Centroid.hpp  ComplexSpectralDifference.hpp  Crest.hpp  EnergyDifference.hpp  Envelope.hpp  Flatness.hpp  GistState.hpp  HighFrequencyContent.hpp  Kurtosis.hpp  MFCC.hpp  Pitch.hpp  Rolloff.hpp  SpectralDifference.hpp  SpectralDifference_HWR.hpp  ZeroCrossing.hpp
AudioOracle/: AudioOracleFactory.cpp  AudioOracleFactory.hpp  AudioOracleMFCCFactory.cpp  AudioOracleMFCCFactory.hpp  AudioOraclePitchFactory.cpp  AudioOraclePitchFactory.hpp  AudioOracleRMSFactory.cpp  AudioOracleRMSFactory.hpp  AudioOracleSpectralCentroidFactory.cpp  AudioOracleSpectralCentroidFactory.hpp  AudioOracleZCSFactory.cpp  AudioOracleZCSFactory.hpp
VariableMarkovOracle/: VariableMarkovOracleCentroidFactory.cpp  VariableMarkovOracleCentroidFactory.hpp  VariableMarkovOracleFactory.cpp  VariableMarkovOracleFactory.hpp  VariableMarkovOracleMFCCFactory.cpp  VariableMarkovOracleMFCCFactory.hpp  VariableMarkovOraclePitchFactory.cpp  VariableMarkovOraclePitchFactory.hpp  VariableMarkovOracleRMSFactory.cpp  VariableMarkovOracleRMSFactory.hpp  VariableMarkovOracleZCSFactory.cpp  VariableMarkovOracleZCSFactory.hpp
